[package]
name = "ocfg"
version = "0.1.0"
edition = "2021"
authors = ["nullorigin"]
description = "OpenWrt Configuration Tool - Automated configuration for OpenWrt routers"
license = "MIT"
repository = "https://github.com/nullorigin/ocfg.git"
readme = "README.md"
keywords = ["openwrt", "configuration", "router", "networking"]
categories = ["command-line-utilities", "config"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Configuration management
config = "0.14"
dirs = "5.0"

# Interactive prompts
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Cryptography for secret generation
rand = "0.8"
openssl = "0.10"
hex = "0.4"
base64 = "0.22"

# File operations
tempfile = "3.10"
shellexpand = "3.1"

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime (for future network operations)
tokio = { version = "1.35", features = ["full"] }

# HTTP client for wiki parsing
reqwest = { version = "0.11", features = ["json"] }

# Regex for parsing
regex = "1.10"

# Template rendering
handlebars = "5.1"

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "ocfg"
path = "src/main.rs"

[lib]
name = "ocfg"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
