[package]
name = "ocfg"
version = "0.1.0"
edition = "2021"
authors = ["nullorigin"]
description = "OpenWrt Configuration Tool - Automated configuration for OpenWrt routers"
license = "MIT"
repository = "https://github.com/nullorigin/ocfg.git"
readme = "README.md"
keywords = ["openwrt", "configuration", "router", "networking"]
categories = ["command-line-utilities", "config"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "2.0"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"

# Configuration management
dirs = "6.0"

# Interactive prompts
dialoguer = "0.12"
indicatif = "0.18.4"

# Cryptography for secret generation
rand = "0.10.1"
hex = "0.4"
base64 = "0.22"

reqwest = "0.13.3"
# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime (for future network operations)
tokio = { version = "1.35", features = ["full"] }

# Template rendering
handlebars = "6.4.0"
regex = "1.12.3"
openssl = "0.10.78"


[dev-dependencies]

[[bin]]
name = "ocfg"
path = "src/main.rs"

[lib]
name = "ocfg"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
